@startuml

title __PLANNER1's Class Diagram__\n


    namespace om.example.planner1 {
      class com.example.planner1.App {
          {static} + main()
          + start()
      }
    }

  

  namespace  {
    namespace om.example.planner1 {
      class com.example.planner1.Controller {
          + btnAddPlan : Button
          + btnAddToPlanM : Button
          + btnAddToPlanSt : Button
          + btnClear : Button
          + btnClose11 : Button
          + btnClose111 : Button
          + btnCloseSt : Button
          + btnDeletePlan : Button
          + btnHow : Button
          + btnLeft : Button
          + btnRight : Button
          + btnSave : Button
          + btnSavePlan : Button
          + canvas1 : Canvas
          + canvas2 : Canvas
          + canvas3 : Canvas
          + canvas4 : Canvas
          + canvas5 : Canvas
          + canvas6 : Canvas
          + canvas7 : Canvas
          + chbIsDone : CheckBox
          + cmbTypeFile : ComboBox
          + colColor : TableColumn<tableViewPlan, Color>
          + colComm : TableColumn<tableViewPlan, String>
          + colDate : TableColumn<tableViewPlan, LocalDate>
          + colDiscipl : TableColumn<tableViewPlan, String>
          + colFrom : TableColumn<tableViewPlan, String>
          + colNo : TableColumn<tableViewPlan, Integer>
          + colStatus : TableColumn<tableViewPlan, String>
          + colTo : TableColumn<tableViewPlan, String>
          + colWeekNo : TableColumn<tableViewPlan, Integer>
          + cpBlockColor : ColorPicker
          + dpDate : DatePicker
          + gr : GraphicsContext
          + gridPaneNode : GridPane
          + lblColorBlock : Label
          + lblMonth : Label
          + lblWeekNom : Label
          + taComment : TextArea
          + tfAcademicHours : TextField
          + tfDisciplineSt : TextField
          + tfFromTime : TextField
          + tfNameDiscipline : TextField
          + tfToTime : TextField
          + toNext : Button
          + tvTablePlans : TableView<tableViewPlan>
          - calendar : Calendar
          - canvasDateMap : HashMap<Canvas, String>
          - countCol : int
          - date : LocalDate
          - extensions : ObservableList<String>
          - gnow : GregorianCalendar
          - isEditStart : boolean
          - locale : Locale
          - selectedDir : String
          - selectedExtension : String
          - ssp : SnapshotParameters
          - tableViewPlans : ObservableList<tableViewPlan>
          - tfProjectNameM : TextField
          - tfProjectNameSt : TextField
          - weekDates : HashMap<String, Date>
          - weekNo : int
          + btnAddToPlanSt_OnAction()
          + btnLeftClick()
          + btnRightClick()
          + btnSaveOnAction()
          + chooseColorOnAction()
          + clearDiagram()
          + clearDiagramOnAction()
          + getDateString()
          + initialize()
          + loadGanttDiagram()
          + onCanva1_clicked()
          + onCanva2_clicked()
          + onCanva3_clicked()
          + onCanva4_clicked()
          + onCanva5_clicked()
          + onCanva6_clicked()
          + onCanva7_clicked()
          + setCanvasColor()
          + setToolTips()
          + taCommentInputChange()
          - init_Data()
          - starMethodistWindow()
          - starStudentWindow()
      }
    }
  }
  

  com.example.planner1.App -up-|> javafx.application.Application
  com.example.planner1.Controller .up.|> javafx.fxml.Initializable
  com.example.planner1.Controller o-- model.UserSettings : userSettings
  com.example.planner1.Controller o-- model.CheckClass : checkClass
  com.example.planner1.Controller o-- model.Decorator : decRectan
  com.example.planner1.Controller o-- model.Rectan : rectan
  com.example.planner1.Controller o-- model.SaveFactory : saveFactory
  com.example.planner1.Controller o-- model.SaveSettings : saveSettings


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
